fixed flexbox for spacing for nav

--- a/sass/navigation/_menus.scss
+++ b/sass/navigation/_menus.scss
@@ -8,13 +8,24 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    .flex-child {
+      flex: 0 0 33.33%;
+    }
   }
 
-  button {
+
+  .menu-toggle {
     background-color: transparent;
     color: $color__brand-4;
-    width: 70px;
+    // width: 70px;
     border-radius: none;
+    padding: 0;
+    margin: 0;
+
+    .menu-title {
+      text-transform: uppercase;
+    }
 
     span {
       display: block;
@@ -48,6 +59,8 @@
       display: block;
       width: 72px;
       height: 60px;
+      margin-left: auto;
+      margin-right: auto;
     }
   }
 
@@ -63,6 +76,8 @@
       background-color: $color__brand-1;
       color: #fff;
       padding: .5em 1em;
+      margin-left: auto;
+      font-size: .9em;
 
       a {
         color: #fff;
@@ -78,7 +93,6 @@
       a {
         color: $color__brand-4;
         text-decoration: none;
-        padding: 0 1em;
       }
 
       &.current_page_item,
@@ -95,6 +109,7 @@
         border: 2px solid $color__brand-4;
         color: $color__brand-1;
         position: relative;
+        padding: 0 1em;
 
         &:before,
         &:after {
@@ -114,8 +129,6 @@
           bottom: -.45em;
         }
       }
-
-
     }
   }
 
@@ -126,6 +139,7 @@
       list-style: none;
       margin: 0;
       padding-left: 0;
+      margin-right: 5px;
 
       ul.sub-menu {
         background-color: #fff;
@@ -250,9 +264,20 @@
 
   }
 
-  @include respond-to(small) {
+  @media only screen and (min-width: 400px) {
+    #aux-menu .join-now-link {
+      font-size: 1em;
+    }
+  }
 
+  @include respond-to(small) {
     padding-top: 0;
+
+    .flex-wrapper {
+      .flex-child {
+        flex: none;
+      }
+    }
 
     .pbc-logo {
       margin-bottom: -1.4em;
